# CuWatch_code

./: .clangd  .gitignore  Dockerfile  LICENSE  README.md  requirements-dev.txt
c_src/: CMakeLists.txt  lwipopts.h  main.c  setup
src/: README.md  RingBuffer.py  analyze.ipynb  asynchio1.py  asynchio2.py  asynchio3.py  asynchio4.py  asynchio5.py  asynchio6.py  asyncio0.py  basic_webserver.py  blink2.py  boot.py  findmac.py  install.ps1  install.py  install.sh  install_mqtt.sh  macs.md  make_follower.py  make_leader.py  muon_data_20241101_1806.csv  pepper_analyze.ipynb  readout.py  sdtest.py  server_check.py  setrtc.py  style.css  styles.css  test_client.py  test_files1.py  test_server.py  thread1.py  util.py  webserver.py  webserver2.py
